updated jenkins file

--- a/01-vpc/Jenkinsfile
+++ b/01-vpc/Jenkinsfile
@@ -1,6 +1,8 @@
 pipeline {
     agent { node { label 'agent1' } }
-
+ options {
+        ansiColor('xterm') 
+    }
     stages {
         stage('Init') {
             steps {
